# proto_tokenize

./: .gitignore  .pypirc  README.md  proto_tokenize.py  pyproject.toml  test_tokenize.py
.github/workflows/: build-wheels.yml  publish.yml
src/proto_tokenize/: __init__.py  proto_tokenize.py  tokenizer.py
tests/: test_tokenize.py
