[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proto_tokenize"
dynamic = ["version"]
authors = [{name = "Patrick Elmer", email = "patrick@elmer.ws"}]
description = "Convert IPA transcribed words into sequence tokens."
readme = "README.md"

[project.urls]
Home = "https://github.com/PatrickElmer/proto_tokenize"

[tool.hatch.version]
path = "proto_tokenize.py"

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc"]
